# Gauge

./: .gitignore  CMakeLists.txt  README.md
doc/: progess.md
src/UI/: client.glade
src/client/: CMakeLists.txt  client.c  testClient.c  udpclient.c
src/core/: CMakeLists.txt  Db.c  Db.h  Parser.c  Parser.h  Socket.c  Socket.h
src/legacy/: EventListener.h  EventListenerTest.c
src/server/: CMakeLists.txt  EventListener.c  server.c  testServer.c  udpserver.c
src/test/: CMakeLists.txt  DbTest.c  ParserTest.c
